tests/types/errors/compare_struct_int.err
1. error[T013]: incompatible types in comparison
  --> tests/types/errors/compare_struct_int.mochi:4:11

  4 | let x = u == 5
    |           ^

help:
  Use comparable types like numbers or strings with `<`, `>`.
